New Flask version and added voltage support.

--- a/rdc_server/MANIFEST.in
+++ b/rdc_server/MANIFEST.in
@@ -2,5 +2,5 @@ recursive-include rdc/templates *
 recursive-include rdc/static *
 recursive-include rdc/mobile/templates *
 recursive-include rdc/mobile/static *
-include rdc/*.cfg
-include rdc/*.po
+#include rdc/*.cfg
+#include rdc/*.po
